new edit option available with the newly added html and js files

--- a/plantersinf/planner/templates/planner/date.html
+++ b/plantersinf/planner/templates/planner/date.html
@@ -63,7 +63,7 @@
 						  <div class="container">
 							<label for="category"></label>
 							<input type="text" id="category" name="category" placeholder="New Category">
-							<a class="btn btn-primary category-btn" href="#">Add to list</a>
+							<a class="btn btn-primary category-btn" href="#" id="{{date.id}}">Add to list</a>
 						  </div>
 							  <div class="form-group row">
 								<div class="col-lg">
