--- a/plantersinf/planner/templates/planner/create.html
+++ b/plantersinf/planner/templates/planner/create.html
@@ -46,7 +46,7 @@
 		  </div>
 		  <div class="container">
 			<label for="category"></label>
-			<input type="text" id="category" name="category" placeholder="New Category">
+			<input type="text" id="category" name="category" placeholder="New Category" value="">
 			<a class="btn btn-primary category-btn" href="#">Add to list</a>
 		  </div>
 			  <div class="form-group row">
