--- a/plantersinf/planner/templates/planner/datelist.html
+++ b/plantersinf/planner/templates/planner/datelist.html
@@ -80,7 +80,7 @@
             <div class="container sun">
               {%for date in weekdates%}    
               {%if date.weekday == "sun"%}
-              <a href='/date/{{date.id}}'>{{date.day}}</a>
+              <a href='/date/{{date.id}}' id="{{date.month}}{{date.day}}">{{date.day}}</a>
               {%for act in date.recurring.all%}
               <div class="container p-0 rounded shadow activity" style="background-color: {{act.color}};" width="10" id="{{act.name}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}
 
@@ -96,7 +96,7 @@
             <div class="container mon">
               {%for date in weekdates%}    
               {%if date.weekday == "mon"%}
-              <a href='/date/{{date.id}}'>{{date.day}}</a>
+              <a href='/date/{{date.id}}' id="{{date.month}}{{date.day}}">{{date.day}}</a>
               {%for act in date.recurring.all%}
               <div class="container p-0 rounded shadow activity" style="background-color: {{act.color}};" width="10" id="{{act.name}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}
 
@@ -112,7 +112,7 @@
             <div class="container tue">
               {%for date in weekdates%}    
               {%if date.weekday == "tue"%}
-              <a href='/date/{{date.id}}'>{{date.day}}</a>
+              <a href='/date/{{date.id}}' id="{{date.month}}{{date.day}}">{{date.day}}</a>
               {%for act in date.recurring.all%}
               <div class="container p-0 rounded shadow activity" style="background-color: {{act.color}};" width="10" id="{{act.name}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}
 
@@ -128,7 +128,7 @@
             <div class="container wed">
               {%for date in weekdates%}    
               {%if date.weekday == "wed"%}
-              <a href='/date/{{date.id}}'>{{date.day}}</a>
+              <a href='/date/{{date.id}}' id="{{date.month}}{{date.day}}">{{date.day}}</a>
               {%for act in date.recurring.all%}
               <div class="container p-0 rounded shadow activity" style="background-color: {{act.color}};" width="10" id="{{act.name}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}
 
@@ -144,7 +144,7 @@
             <div class="container thu">
               {%for date in weekdates%}    
               {%if date.weekday == "thu"%}
-              <a href='/date/{{date.id}}'>{{date.day}}</a>
+              <a href='/date/{{date.id}}' id="{{date.month}}{{date.day}}">{{date.day}}</a>
               {%for act in date.recurring.all%}
               <div class="container p-0 rounded shadow activity" style="background-color: {{act.color}};" width="10" id="{{act.name}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}
 
@@ -160,7 +160,7 @@
             <div class="container fri">
               {%for date in weekdates%}    
               {%if date.weekday == "fri"%}
-              <a href='/date/{{date.id}}'>{{date.day}}</a>
+              <a href='/date/{{date.id}}' id="{{date.month}}{{date.day}}">{{date.day}}</a>
               {%for act in date.recurring.all%}
               <div class="container p-0 rounded shadow activity" style="background-color: {{act.color}};" width="10" id="{{act.name}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}
 
@@ -176,7 +176,7 @@
             <div class="container sat">
               {%for date in weekdates%}    
               {%if date.weekday == "sat"%}
-              <a href='/date/{{date.id}}'>{{date.day}}</a>
+              <a href='/date/{{date.id}}' id="{{date.month}}{{date.day}}">{{date.day}}</a>
               {%for act in date.recurring.all%}
               <div class="container p-0 rounded shadow activity" style="background-color: {{act.color}};" width="10" id="{{act.name}}" data-toggle="tooltip" data-placement="right" title="{{act.name}}">{{act.category.category}}
 
