--- a/plantersinf/planner/templates/planner/date.html
+++ b/plantersinf/planner/templates/planner/date.html
@@ -168,8 +168,31 @@
 			</div>
 		</div><!--row-->
 		<!--activity loop begins-->
-		{%for activity in activities%}
-		<p class="lead text-center" style="font-size: 16px;">{{activity.name}} : {{activity.start_time}} --> {{activity.end_time}}</p>
+		
+			{%for activity in activities%}
+			<form action="/time/{{date.id}}" method="post" id="timevisual_{{activity.id}}">
+				{% csrf_token%}
+		<div class="d-flex flex-row justify-content-center">
+			<div class="p-1">
+				<div class="container">
+					<p class="lead">
+						{{activity.name}} :
+					</p>
+				</div>
+				
+			</div>
+			<div class="p-1">
+				<input type="time" class="form-control border-info" name='starttime_{{activity.id}}' placeholder="{{activity.start_time}}" id='starttime_{{activity.id}}' value="{{activity.start_time}}">
+				
+			</div>
+			<div class="p-1">
+				<input type="time" class="form-control border-info" name='endtime_{{activity.id}}' placeholder="{{activity.end_time}}" id='endtime_{{activity.id}}' value="{{activity.end_time}}">
+			</div>
+			<div class="p-1">
+				<input type="submit" form="timevisual_{{activity.id}}">
+			</div>
+		</div>
+			
 		<div class="row activity_row border rounded shadow-sm" id="clock_{{activity.id}}_{{activity.start_time}}_{{activity.end_time}}">
 			<div class="col-1 px-3">
 				<div class="row">
@@ -364,16 +387,16 @@
 				</div>
 			</div>
 		</div><!--row-->
+		</form>
 		{%endfor%}
+		
 	</div><!--clock-->
     <div class="container pt-5">
       <table class="table table-hover">
         <thead class="thead-dark">
           <tr>
             <th scope="col" style="width: 5%">Remove</th>
-			<th scope="col" style="width: 20%">Activity Name</th>
-			<th scope="col" style="width: 10%">Start Time</th>
-			<th scope="col" style="width: 10%">End Time</th>
+			<th scope="col" style="width: 40%">Activity Name</th>
             <th scope="col" style="width: 15%">Target Time (hr:min:sec)</th>
             <th scope="col" style="width: 15%">Current Time</th>
             <th scope="col" style="width: 25%">Control</th>
@@ -396,8 +419,6 @@
 					<a class="edit-activity" href='/edit/{{activity.id}}/{{date.id}}' id='go_{{activity.id}}'>{{activity.name}}</a>
 					 
 					</td>
-					<td><input class="form-control text-secondary" type="text" placeholder="{{activity.start_time}}" id='starttime_{{activity.id}}' name="starttime_{{activity.id}}" value="{{activity.start_time}}" readonly></td>
-					<td><input class="form-control text-secondary" type="text" placeholder="{{activity.end_time}}" id='endtime_{{activity.id}}' name="endtime_{{activity.id}}" value="{{activity.end_time}}" readonly></td>
 					<td><input class="form-control activity-duration" id='duration_{{activity.id}}' value="{{activity.duration}}" readonly></td>
 					<td><input class="form-control text-success stopwatch" type="text" placeholder="{{activity.current_time}}" id='time_{{activity.id}}' name="time_{{activity.id}}" value="{{activity.current_time}}" readonly>
 						</td>
