--- a/plantersinf/planner/templates/planner/edit.html
+++ b/plantersinf/planner/templates/planner/edit.html
@@ -25,137 +25,146 @@
 		  </div>
 		  <div class="card-body">
 			<form action="/edit/{{editid}}/{{dateid}}" method="post" id='activity'>
-			{% csrf_token %}
-			<div class="form-group row">
-				
-					<div class="container float-right">
-						<label for="categoryselection">Select a category:</label>
-						<select class="form-control" id="categoryselection" name="categoryselection">
-                            {%if categories%}
-                            {%for category in categories%}
-                            {%if category.category == editcategory%}
-							<option id="{{category.category}}" value="{{category.category}}" selected>{{category.category}}</option>
-                            {%else%}
-                            <option id="{{category.category}}" value="{{category.category}}">{{category.category}}</option>
-                            {%endif%}
-                            {%endfor%}
-                            
-							{%else%}
-							<option value="" >no categories</option>
-							{%endif%}
-						</select>
-					</div>
-					
-				
-				
-		  </div>
-		  <div class="container">
-			<label for="category"></label>
-			<input type="text" id="category" name="category" placeholder="New Category">
-			<a class="btn btn-primary category-btn" href="#">Add to list</a>
-		  </div>
-			  <div class="form-group row">
-				<div class="col-lg">
-					<div class="container">
-						<label for="name">Activity Name</label>
-						<input type="text" class="form-control" name="name" value="{{editname}}">
-						<div class="container p-0 m-0">
-							<div class="form-group row">
-								<div class="btn-group btn-group-toggle dotw">
-									
-									<label class="btn btn-secondary days" for="hiddenmon" id="mon">
-										<input type="hidden" class="day" name="mon" id="hiddenmon" value="{{mon}}">Mo
-									</label>
-									
-
-									<label class="btn btn-secondary days" for="hiddentue"id="tue">
-										<input type="hidden" class="day" name="tue" id="hiddentue"value="{{tue}}">Tu
-									</label>
-									
-
-									
-									<label class="btn btn-secondary days" for="hiddenwed"id="wed">
-										<input type="hidden" class="day" name="wed" id="hiddenwed"value="{{wed}}">We
-									</label>
-									
-
-									
-									<label class="btn btn-secondary days" for="hiddenthu"id="thu">
-										<input type="hidden" class="day" name="thu" id="hiddenthu"value="{{thu}}">Th
-									</label>
-									
-
-									
-									<label class="btn btn-secondary days" for="hiddenfri"id="fri">
-										<input type="hidden" class="day" name="fri" id="hiddenfri"value="{{fri}}">Fr
-									</label>
-									
-
-									
-									<label class="btn btn-secondary days" id="sat"for="hiddensat">
-										<input type="hidden" class="day" id="hiddensat"name="sat" value="{{sat}}">Sa
-									</label>
-									
-									<label class="btn btn-secondary days" for="hiddensun"id="sun">
-										<input type="hidden" class="day" name="sun" id="hiddensun" value="{{sun}}">Su
-									</label>
-									
+				{% csrf_token %}
+				<div class="form-row mb-4">
+						<div class="col-md">
+							<label for="categoryselection">Select a category:</label>
+							<select class="form-control" id="categoryselection" name="categoryselection">
+								{%if categories%}
+								{%for category in categories%}
+								{%if category.category == editcategory%}
+								<option id="{{category.category}}" value="{{category.category}}" selected>{{category.category}}</option>
+								{%else%}
+								<option id="{{category.category}}" value="{{category.category}}">{{category.category}}</option>
+								{%endif%}
+								{%endfor%}
+								
+								{%else%}
+								<option value="" >no categories</option>
+								{%endif%}
+							</select>
+						</div>
+						<div class="col-md">
+							<div class="form-group">
+								<label for="category"></label>
+								<div class="input-group mt-4">
+									<div class="input-group-prepend">
+										<div class="input-group-text">New Category</div>
+									</div>
+									<input class="form-control" type="text" id="category" name="category" placeholder="Category Name">
+									<div class="input-group-append">
+										<a class="btn btn-primary category-btn" href="#">Add</a>
+									</div>
 								</div>
-								
-								
 								
 								
 							</div>
-							<div class="form-group row">
-								<div class="col-lg">
-									<label for="sdate">Edit Start Date</label>
-									<input type="date" name="sdate" max="3000-12-31" min="1000-01-01" class="form-control" value='{{editstart_date}}'>
-								</div>
-								<div class="col-lg">
-									<label for="edate">Edit End Date</label>
-									<input type="date" name="edate" min="1000-01-01" max="3000-12-31" class="form-control" value='{{editend_date}}'>
+						</div>	
+				</div>
+				<div class="form-row">
+					<div class="col-lg">
+						<div class="input-group mb-3">
+							<div class="input-group-prepend">
+								<div class="input-group-text">
+									Activity Name
 								</div>
 							</div>
 							
+							<input type="text" class="form-control" name="name" value="{{editname}}">
+							
+						</div>
+					</div>
+					<div class="col-lg">
+						<div class="form-group">
+							<div class="btn-group btn-group-toggle dotw">
+								
+								<label class="btn btn-outline-primary days mr-2 rounded shadow-sm" for="hiddenmon" id="mon">
+									<input type="hidden" class="day" name="mon" id="hiddenmon" value="{{mon}}">Mo
+								</label>
+		
+								<label class="btn btn-outline-primary days mr-2 rounded shadow-sm" for="hiddentue"id="tue">
+									<input type="hidden" class="day" name="tue" id="hiddentue"value="{{tue}}">Tu
+								</label>
+		
+								<label class="btn btn-outline-primary days mr-2 rounded shadow-sm" for="hiddenwed"id="wed">
+									<input type="hidden" class="day" name="wed" id="hiddenwed"value="{{wed}}">We
+								</label>
+		
+								<label class="btn btn-outline-primary days mr-2 rounded shadow-sm" for="hiddenthu"id="thu">
+									<input type="hidden" class="day" name="thu" id="hiddenthu"value="{{thu}}">Th
+								</label>
+		
+								<label class="btn btn-outline-primary days mr-2 rounded shadow-sm" for="hiddenfri"id="fri">
+									<input type="hidden" class="day" name="fri" id="hiddenfri"value="{{fri}}">Fr
+								</label>
+		
+								<label class="btn btn-outline-primary days mr-2 rounded shadow-sm" id="sat"for="hiddensat">
+									<input type="hidden" class="day" id="hiddensat"name="sat" value="{{sat}}">Sa
+								</label>
+								
+								<label class="btn btn-outline-primary days mr-2 rounded shadow-sm" for="hiddensun"id="sun">
+									<input type="hidden" class="day" name="sun" id="hiddensun" value="{{sun}}">Su
+								</label>
+								
+							</div>
+						</div>
+					</div>
+				</div>
+				
+
+				
+				<div class="form-row">
+					<div class="col-sm">
+						<div class="form-group">
+							<label for="sdate">Edit Start Date</label>
+							<input type="date" name="sdate" max="3000-12-31" min="1000-01-01" class="form-control" value='{{editstart_date}}'>
+						</div>
+					</div>
+					<div class="col-sm">
+						<div class="form-group">
+							<label for="edate">Edit End Date</label>
+							<input type="date" name="edate" min="1000-01-01" max="3000-12-31" class="form-control" value='{{editend_date}}'>
+						</div>
+					</div>
+				</div>
+				
+				<div class="form-row">
+					<div class="col-sm">
+						<div class="form-group">
+							<label for="start_time">Edit Activity Start Time</label>
+							<input type="time"class="form-control" name="start_time" id="start_time" value="{{editstart_time}}">
+						</div>
+					</div>
+					<div class="col-sm">
+						<div class="form-group">
+							<label for="end_time">Edit Activity End Time</label>
+							<input type="time"class="form-control" name="end_time" id="end_time" value="{{editend_time}}">
 						</div>
 					</div>
 					
-				</div>
-				<div class="col-lg">
-					<div class="container">
-						<label for="start_time">Edit Activity Start Time</label>
-						<input type="time"class="form-control" name="start_time" id="start_time" value="{{editstart_time}}">
-						<label for="end_time">Edit Activity End Time</label>
-						<input type="time"class="form-control" name="end_time" id="end_time" value="{{editend_time}}">
 
-					</div>
-					
 				</div>
-			  </div>
-			  <div class="form-group row">
-				  <div class="col">
-					<div class="container">
-						<label for="activitycolor">Edit activity color:</label>
-						<input type="color" id="activitycolor" name="activitycolor" value="{{editcolor}}">
-					</div>
-				  </div>
-				  <div class="col">
-					<div class="container">
-						<label for="allevents">Apply to all events?</label>
-						<input type="hidden" name="allevents" id="alleventsvalue" value="0">
-						<a type="button" class="btn btn-secondary text-white" id="alleventsbtn">No</a>
-						
-					</div>
-				  </div>
-			  </div>
-			  
-			  <div class="form-group row">
 				
-			  </div>
-			  
-			
-
-			  <input type="submit" class="btn btn-primary submitbtn" form='activity' id='submitbtn' value="Apply">
+				<div class="form-row">
+					<div class="col">
+						<div class="form-group">
+							<label for="activitycolor">Edit activity color:</label>
+							<input type="color" id="activitycolor" name="activitycolor" class="form-control" value="{{editcolor}}">
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-group mt-4">
+							
+							<label for="allevents">Apply changes to all events?</label>
+							<input type="hidden" name="allevents" id="alleventsvalue" value="0">
+							<a type="button" class="btn btn-secondary text-white" id="alleventsbtn">No</a>
+							
+						</div>
+					</div>
+				</div>
+					<hr>
+				  <input type="submit" class="btn btn-primary btn-block submitbtn" form='activity' id='submitbtn' value="Apply">
+				
 			</form>
 		  </div>
 		  <div class="card-footer text-muted">
