--- a/plantersinf/planner/templates/planner/datelist.html
+++ b/plantersinf/planner/templates/planner/datelist.html
@@ -17,8 +17,11 @@
   
   <!--canvas container-->
   <div class="fluid-container">
-    <div class="container editlist">
-    
+    <div class="container editlist p-2">
+      <a class="btn btn-sm btn-dark" href="/dashboard">
+        Dashboard
+      </a>
+      <a href="/" class="btn btn-primary btn-sm">Home</a>
     </div>
 
     {%for eachyear in years%}
