--- a/plantersinf/planner/templates/planner/dashboard.html
+++ b/plantersinf/planner/templates/planner/dashboard.html
@@ -159,36 +159,44 @@
 						
 						
 						
-						<div class="d-flex flex-wrap charts" id="{{month}}-{{year}}-charts">
-						{%for daynum,dayobj in monthobj.completed.items%}
-							{%if dayobj%}
-							<div class="eventchart" id="{{month}}-{{year}}-{{daynum}}" style="display: none;">
-								<div class="d-flex" style="height: 200px; width: 200px;">
+						<div class="charts" id="{{month}}-{{year}}-charts">
+							<div class="d-flex flex-wrap weekeventbox"></div>
+							<div class="d-flex flex-wrap weekcategorybox"></div>
+							<div class="d-flex flex-wrap eventbox">
+								{%for daynum,dayobj in monthobj.completed.items%}
+								{%if dayobj%}
+								<div class="eventchart mb-5 border border-right-0 px-1 ml-1 shadow-sm" id="{{month}}-{{year}}-{{daynum}}" style="display: none;">
+									<div style="height: 250px; width: 200px;">
+										
+										<p>{{daynum}}</p>
+										<canvas class="canvas" id="{{month}}-{{year}}-{{daynum}}-event" style="width: 200px; height: 200px;"></canvas>		
 									
-									<p class="pl-3">{{daynum}}</p>
-									<canvas class="canvas pr-3" id="{{month}}-{{year}}-{{daynum}}-event" style="width: 200px; height: 200px;"></canvas>		
-								
+									</div>
 								</div>
+								
+								
+								{%endif%}
+								{%endfor%}
 							</div>
-							
-							{%endif%}
-						{%endfor%}
-
-						{%for daynum,dayobj in monthobj.categorygrouped.items%}
-							{%if dayobj%}
-							<div class="categorychart" id="{{month}}-{{year}}-{{daynum}}" style="display: none;">
-								<div class="d-flex" style="height: 200px; width: 200px;">
+						
+							<div class="d-flex flex-wrap categorybox">
+								{%for daynum,dayobj in monthobj.categorygrouped.items%}
+								{%if dayobj%}
+								<div class="categorychart mb-5 border border-left-0 px-1 mr-1 shadow-sm" id="{{month}}-{{year}}-{{daynum}}" style="display: none;">
+									<div style="height: 250px; width: 200px;">
+										
+										<p>{{daynum}}</p>
+										<canvas class="canvas" id="{{month}}-{{year}}-{{daynum}}-category" style="width: 200px; height: 200px;"></canvas>		
 									
-									<p class="pl-3">{{daynum}}</p>
-									<canvas class="canvas pr-3" id="{{month}}-{{year}}-{{daynum}}-category" style="width: 200px; height: 200px;"></canvas>		
-								
+									</div>
 								</div>
+								
+								{%endif%}	
+								{%endfor%}	
 							</div>
+							<div class="d-flex flex-wrap"></div>
 							
-							{%endif%}	
-						{%endfor%}	
-
-								<canvas id="{{month}}-{{year}}-100-complete" width="10" height="10" style="display: hidden;"></canvas>		
+							<canvas id="{{month}}-{{year}}-100-complete" width="10" height="10" style="display: hidden;"></canvas>		
 								
 						</div>
 						
@@ -199,7 +207,7 @@
 							{%if dayobj%}
 								{%for activityname,activityobj in dayobj.items%}
 						
-								<div class="{{month}}-{{year}}" id='{{activityname}}-{{daynum}}' data-completed="{{activityobj.percentagecomplete}}" data-name="{{activityname}}" data-color="{{activityobj.color}}"></div>
+								<div class="{{month}}-{{year}}" id='{{activityname}}-{{daynum}}' data-completed="{{activityobj.minutescomplete}}" data-name="{{activityname}}" data-color="{{activityobj.color}}"></div>
 						
 								{%endfor%}
 							{%endif%}
