added a finish button for created activities in day view
-allows user to manually finish or make active an activity regardless of elapsed time.
-added data migration to accommodate new data model

--- a/plantersinf/planner/templates/planner/date.html
+++ b/plantersinf/planner/templates/planner/date.html
@@ -483,11 +483,12 @@
 			<th scope="col" style="width: 40%">Activity Name</th>
             <th scope="col" style="width: 15%">Target Time (hr:min:sec)</th>
             <th scope="col" style="width: 15%">Current Time</th>
-            <th scope="col" style="width: 25%">Control</th>
+			<th scope="col" style="width: 15%">Control</th>
+			<th scope="col" style="width: 10%"></th>
             
           </tr>
         </thead>
-        <tbody class="date_table">
+        <tbody class="date_table" id='tablebody'>
 			<form action="/control/{{date.id}}" method="post" id="stopwatches">
 				{% csrf_token %}
 			{%for activity in activities%}
@@ -508,7 +509,7 @@
 						</td>
 						<input type="hidden" class="activate" name="active_{{activity.id}}" id="active_{{activity.id}}" value="{{activity.active}}">
 					<td><a class="btn btn-success text-white" id="start_{{activity.id}}" style="display:flexbox;">Start</a><input type="submit" class="btn btn-primary text-white" form='stopwatches' id="pause_{{activity.id}}" name="pause_{{activity.id}}" style="display: none;" value="Pause"><input type="submit" class="btn btn-danger text-white" form='stopwatches' id="stop_{{activity.id}}" name="stop_{{activity.id}}" style="display:flexbox;" value="Clear"></a></td>
-				
+					<td><a class="btn btn-sm btn-outline-dark finishbutton" id='finishbutton_{{activity.id}}'>Finish</a><input type='hidden' class="finish" id='finish_{{activity.id}}' name='finish_{{activity.id}}' value='{{activity.finish}}'></td>
 			</tr>
 				
 		  	{%endfor%}
